--- a/GC-MT-1/GC-MT-1.csproj
+++ b/GC-MT-1/GC-MT-1.csproj
@@ -55,5 +55,8 @@
     <None Include="App.config" />
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Menu.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
